--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Information Management System Project</h3>
+            <p>Manages the information of all related company profiles and services.</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Online Transportation Booking Project</h3>
+            <p>Facilitates transportation for online booking.</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
